--- a/index.html
+++ b/index.html
@@ -39,35 +39,27 @@
     
     <!-- Navbar -->
     <nav class="custom-navbar navbar navbar-expand-lg navbar-dark fixed-top" data-spy="affix" data-offset-top="10">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="#">
+            <img src="assets/imgs/file.svg" class="brand-img" alt="">
+            <span class="brand-txt">Good Food</span>
+        </a>
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+        
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#home">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#menu">Menu</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#about">About</a> <!-- Updated here to 'About' -->
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" id="toggle-cart-btn">Shopping Cart</a>
-                </li>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#menu">Menu</a></li>
+                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#" id="toggle-cart-btn">Shopping Cart</a></li>
             </ul>
-            <a class="navbar-brand m-auto" href="#">
-                <img src="assets/imgs/file.svg" class="brand-img" alt="">
-                <span class="brand-txt">Good Food</span>
-            </a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact Us</a>
-                </li>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
             </ul>
         </div>
-    </nav>
+    </nav>    
 
     <!-- header -->
     <header id="home" class="header">
